src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ARR_Formula__c</fullName>
        <formula>IF(ISPICKVAL( Billing_Schedule__c , &quot;One-time&quot;), 0,
IF((End_Date__c - Start_Date__c)&lt;2,0,
IF((End_Date__c - Start_Date__c)&lt;364,(TotalPrice/((End_Date__c - Start_Date__c)/365)),
IF((End_Date__c - Start_Date__c)=364, TotalPrice,
IF((End_Date__c - Start_Date__c)=365, TotalPrice,
IF((End_Date__c - Start_Date__c)=366, TotalPrice,
IF((End_Date__c - Start_Date__c)&gt;366,(TotalPrice/((End_Date__c - Start_Date__c)/365)),0)))))))</formula>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <label>ARR (NS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <label>% Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>At_RIsk_Revenue__c</fullName>
        <formula>IF( AND(NOT(ISBLANK((TEXT( Opportunity.Renewal_Risk__c )))), Opportunity.IsClosed = FALSE), ARR_Formula__c  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>At RIsk Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDB_ID__c</fullName>
        <externalId>true</externalId>
        <label>CDB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Start_Month__c</fullName>
        <formula>CASE(MONTH(Start_Date__c),
1,&quot;01 (Jan) &quot;,
2,&quot;02 (Feb) &quot;,
3,&quot;03 (Mar) &quot;,
4,&quot;04 (Apr) &quot;,
5,&quot;05 (May) &quot;,
6,&quot;06 (Jun) &quot;,
7,&quot;07 (Jul) &quot;,
8,&quot;08 (Aug) &quot;,
9,&quot;09 (Sep) &quot;,
10,&quot;10 (Oct) &quot;,
11,&quot;11 (Nov) &quot;,
12,&quot;12 (Dec) &quot;,
null)
+
TEXT(YEAR(Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Channel__c</fullName>
        <formula>Opportunity.Account.Customer_Channel__c</formula>
        <label>Customer Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Snowflake</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>UK Retail - All</fullName>
                </value>
                <value>
                    <fullName>UK Retail - Convenience</fullName>
                </value>
                <value>
                    <fullName>UK Retail - Multiples</fullName>
                </value>
                <value>
                    <fullName>UK Retail - Independents</fullName>
                </value>
                <value>
                    <fullName>UK Retail - London</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Effective_Date__c</fullName>
        <label>Finance Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Billing_Contact_Category__c</fullName>
        <label>Hidden Billing Contact Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Contact_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Increase_Percent__c</fullName>
        <formula>IF(Starting_Price__c=0,0,Increase_dollar__c /  Starting_Price__c)</formula>
        <label>% Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Increase_dollar__c</fullName>
        <formula>If( UnitPrice &gt; 0, (ARR_Formula__c  - Starting_Price__c),0)</formula>
        <label>$ Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <formula>IF( UnitPrice = 0,  Starting_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business_Credit__c</fullName>
        <formula>IF( ISPICKVAL(Sales_Type__c, &quot;Renewal&quot;), 0,
IF( ISPICKVAL(Sales_Type__c, &quot;New&quot;), ARR_Formula__c ,
IF( ISPICKVAL(Sales_Type__c, &quot;Upsell&quot;), ARR_Formula__c, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>News_ID__c</fullName>
        <externalId>true</externalId>
        <label>News ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News__c</fullName>
        <formula>ISPICKVAL(PricebookEntry.Product2.Family, &quot;News&quot;)</formula>
        <label>News?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_ID__c</fullName>
        <formula>Id</formula>
        <label>Opportunity Line Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Name__c</fullName>
        <description>For Roll-up Summary Calculation based on Product name</description>
        <label>Opportunity Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Total_Amount__c</fullName>
        <formula>IF(Opportunity.Total_ARR__c=0,0,ARR_Formula__c/  Opportunity.Total_ARR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>PricebookEntry.Product2.Description</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_External_Id__c</fullName>
        <description>External Id of the product in NS.</description>
        <label>Product External Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Text(PricebookEntry.Product2.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_Description__c</fullName>
        <label>Product Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABA</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>REA</fullName>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
                <value>
                    <fullName>HFA</fullName>
                    <isActive>false</isActive>
                    <label>HFA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>React_id__c</fullName>
        <externalId>true</externalId>
        <label>React id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recurring_Revenue_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Revenue Snapshot</label>
        <referenceTo>Recurring_Revenue_Snapshot__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewable_Amount__c</fullName>
        <formula>IF( ISPICKVAL(Opportunity.StageName, &quot;Closed Won&quot;),  ARR_Formula__c ,  Starting_Price__c)</formula>
        <label>Renewable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Credit__c</fullName>
        <formula>IF( ISPICKVAL(Sales_Type__c, &quot;Renewal&quot;), ARR_Formula__c,
IF( ISPICKVAL(Sales_Type__c, &quot;New&quot;), 0,
IF( ISPICKVAL(Sales_Type__c, &quot;Upsell&quot;), 0, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Research__c</fullName>
        <formula>ISPICKVAL(PricebookEntry.Product2.Family, &quot;Research&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Research?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Adjusted_ARR__c</fullName>
        <formula>IF(ISPICKVAL( Opportunity.StageName ,&quot;Closed Lost&quot;), 0,
IF(ISPICKVAL( Opportunity.StageName ,&quot;Suspended&quot;), 0, 
IF(ISPICKVAL( Opportunity.StageName ,&quot;Closed Won&quot;), ARR_Formula__c, 
IF(ISPICKVAL(Opportunity.Risk_Type__c,&quot;Pricing&quot;), ARR_Formula__c * 0.7,
IF(ISPICKVAL(Opportunity.Risk_Type__c,&quot;Timing&quot;), ARR_Formula__c * 0.0,
IF(ISPICKVAL(Opportunity.Risk_Type__c,&quot;Full Attrition&quot;), ARR_Formula__c * 0.0, 
ARR_Formula__c ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Adjusted ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Type_NS_Internal_ID__c</fullName>
        <formula>CASE( TEXT(Sales_Type__c) , &apos;New&apos;, &apos;3&apos;, &apos;Renewal&apos;, &apos;2&apos;,&apos;Upsell&apos;, &apos;1&apos;, &apos;3&apos; )</formula>
        <label>Sales Type NS Internal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full-page</fullName>
                </value>
                <value>
                    <fullName>Half-page</fullName>
                </value>
                <value>
                    <fullName>Quarter-page</fullName>
                </value>
                <value>
                    <fullName>Banner</fullName>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Starting_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Starting Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sync_to_Netsuite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to denote if record should be synced to netsuite by a scheduled job</description>
        <label>Sync to Netsuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Temp_Exdternal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Temp_Exdternal_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trial?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_or_Beta__c</fullName>
        <label>Trial or Beta?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upsell_Cross_sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upsell / Cross-sell</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Test_List_View</fullName>
        <columns>Opportunity</columns>
        <columns>Product2</columns>
        <columns>UnitPrice</columns>
        <columns>TotalPrice</columns>
        <columns>Upsell_Cross_sell__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Starting_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test List View</label>
    </listViews>
    <validationRules>
        <fullName>Cannot_have_Starting_Price_for_an_Upsell</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Upsell_Cross_sell__c = TRUE,
 Starting_Price__c &gt; 0)</errorConditionFormula>
        <errorMessage>Products that are considered an &quot;Upsell&quot; must have a Starting Price of $0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_Sale_Product_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CONTAINS( Product2.Name , &apos;Data Sale&apos;),
OR(
ISPICKVAL(Delivery_Method__c, &apos;Snowflake&apos;),
ISPICKVAL(Delivery_Method__c, &apos;API&apos;)
)
)</errorConditionFormula>
        <errorMessage>This is not an appropriate Delivery Method for this product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivery_method_required_for_DataDeliver</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(Delivery_Method__c, &apos;&apos;),
 OR(
     Product2.Name  =  &apos;US Data Delivery - Market Data &amp; Deals&apos;,
     Product2.Name  =  &apos;US Data Delivery - REIT Data&apos;,
     Product2.Name  =  &apos;EUR Data Delivery - Market Data &amp; Deals&apos;,
     Product2.Name  =  &apos;EUR Data Delivery - REIT Data&apos;
 )
)</errorConditionFormula>
        <errorMessage>&quot;Delivery method&quot; is required for data delivery products</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Delivery_Method_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(CONTAINS( Product2.Name , &apos;Data Sale&apos;)),
NOT( ISBLANK(TEXT(Delivery_Method__c))),
NOT(OR (
ISPICKVAL(Delivery_Method__c, &apos;Snowflake&apos;),
ISPICKVAL(Delivery_Method__c, &apos;API&apos;)))
)</errorConditionFormula>
        <errorMessage>This is not an appropriate Delivery Method for this product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Starting_Price_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR( 
ISPICKVAL(Opportunity.StageName, &quot;6 - Verbal Win and Finalizing Contract&quot;),
ISPICKVAL(Opportunity.StageName, &quot;Closed Lost&quot;)),
ISBLANK(Starting_Price__c))</errorConditionFormula>
        <errorMessage>Please enter an accurate starting price for each product.</errorMessage>
    </validationRules>
</CustomObject>